welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	avance();
  var a = getX();
  return a
}

def positionFinale(a:Int, b:Int):Boolean = {
  var res = false;
  if (getX()==a && getY()==b) {
    res = true
  }
}